# base_flask_structure

./: LICENSE  README.md  pyproject.toml  requirements.txt
base_flask_structure/: __init__.py
base_flask_structure/config/: __init__.py
base_flask_structure/database/: __init__.py  database.py
src/bfs/: __init__.py
src/bfs/config/: settings.py
src/bfs/config/tests/: test_settings.py
src/bfs/database/: database.py
src/bfs/database/tests/: test_database.py
