[project]
name = "base_flask_structure"
description = "Easily include basic functions on your apps."
readme = "README.md"
authors = [{ name = "Jodagito", email = "jodagito@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["flask", "sqlalchemy", "dotenv", "base"]
dependencies = [
    "python-dotenv",
    "flask-sqlalchemy",
    "psycopg2"
]
requires-python = ">=3.11"
version = "0.0.1"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/Jodagito/base_flask_structure"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"